<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">


        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="50dp"
            android:src="@drawable/poupanca_logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s1"
            android:layout_marginHorizontal="10dp"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/h1"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s2"
            android:layout_marginHorizontal="10dp"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/h2"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s3"
            android:layout_marginHorizontal="10dp"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/h3"
            android:layout_marginHorizontal="10dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/s4"
            android:layout_marginHorizontal="10dp"
            android:textSize="17sp"/>

        <EditText
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:hint="@string/h4"
            android:layout_marginHorizontal="10dp"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/s5"
            android:textColor="#000000"            style="@style/botao"
            android:layout_marginHorizontal="10dp"/>

    </LinearLayout>

</ScrollView>